--- a/LUCAc#/Assembly-CSharp-vs.csproj
+++ b/LUCAc#/Assembly-CSharp-vs.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\classes\cell.cs" />
      <Compile Include="Assets\classes\environment.cs" />
      <Compile Include="Assets\classes\perkData.cs" />
+     <Compile Include="Assets\classes\ressources.cs" />
      <Compile Include="Assets\classes\rtsmove.cs" />
      <Compile Include="Assets\classes\terrain.cs" />
      <None Include="Assets\PrimitivePlus\Documentation\ReadMe.txt" />
