Creation de classe POINT
Classe POINT censée simplifier la gestion des coordonnées atributs :

public int x
public int y

--- a/LUCAc#/Assembly-CSharp-vs.csproj
+++ b/LUCAc#/Assembly-CSharp-vs.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\PrimitivePlus\Scripts\PrimitivePlusEditor.cs" />
+     <Compile Include="Assets\classes\POINT.cs" />
      <Compile Include="Assets\classes\cell.cs" />
      <Compile Include="Assets\classes\environment.cs" />
      <Compile Include="Assets\classes\perkData.cs" />
