--- a/LUCAc#/Assembly-CSharp-vs.csproj
+++ b/LUCAc#/Assembly-CSharp-vs.csproj
@@ -63,7 +63,9 @@
      <Compile Include="Assets\Menu\InstantGui\Scripts\InstantGuiStyle.cs" />
      <Compile Include="Assets\Menu\InstantGui\Scripts\InstantGuiStyleSet.cs" />
      <Compile Include="Assets\PrimitivePlus\Scripts\PrimitivePlusEditor.cs" />
+     <Compile Include="Assets\classes\Individual.cs" />
      <Compile Include="Assets\classes\POINT.cs" />
+     <Compile Include="Assets\classes\Species.cs" />
      <Compile Include="Assets\classes\cell.cs" />
      <Compile Include="Assets\classes\environment.cs" />
      <Compile Include="Assets\classes\perkData.cs" />
