--- a/LUCAc#/Assembly-CSharp.csproj
+++ b/LUCAc#/Assembly-CSharp.csproj
@@ -63,20 +63,20 @@
      <Compile Include="Assets\Menu\InstantGui\Scripts\InstantGuiStyle.cs" />
      <Compile Include="Assets\Menu\InstantGui\Scripts\InstantGuiStyleSet.cs" />
      <Compile Include="Assets\PrimitivePlus\Scripts\PrimitivePlusEditor.cs" />
-     <Compile Include="Assets\classes\Individual.cs" />
      <Compile Include="Assets\classes\InterfaceDetection.cs" />
+     <Compile Include="Assets\classes\Molecules\actionData.cs" />
+     <Compile Include="Assets\classes\Molecules\macroMolecule.cs" />
+     <Compile Include="Assets\classes\Molecules\molecule.cs" />
+     <Compile Include="Assets\classes\Molecules\simpleMolecule.cs" />
      <Compile Include="Assets\classes\POINT.cs" />
-     <Compile Include="Assets\classes\Species.cs" />
-     <Compile Include="Assets\classes\actionData.cs" />
-     <Compile Include="Assets\classes\cell.cs" />
-     <Compile Include="Assets\classes\environment.cs" />
-     <Compile Include="Assets\classes\macroMolecule.cs" />
-     <Compile Include="Assets\classes\molecule.cs" />
-     <Compile Include="Assets\classes\perkData.cs" />
-     <Compile Include="Assets\classes\perkTree.cs" />
+     <Compile Include="Assets\classes\livings\Individual.cs" />
+     <Compile Include="Assets\classes\livings\Species.cs" />
+     <Compile Include="Assets\classes\livings\cell.cs" />
+     <Compile Include="Assets\classes\livings\environment.cs" />
      <Compile Include="Assets\classes\ressources.cs" />
      <Compile Include="Assets\classes\rtsmove.cs" />
-     <Compile Include="Assets\classes\simpleMolecule.cs" />
+     <Compile Include="Assets\classes\skills\perkData.cs" />
+     <Compile Include="Assets\classes\skills\perkTree.cs" />
      <None Include="Assets\PrimitivePlus\Documentation\ReadMe.txt" />
      <None Include="Assets\perktree.txt" />
  <Reference Include="UnityEngine.UI">
