ça avace au niveau de l'arbre...
je me fais chier à implémenter le début d'arbre que m'a fait romain. à
part ça quelques modifs sur les cellules qui ne peuvent plus se barrer
du terrain(bon elles sont toujours connes, par contre).

ça avance... Vous remarquerez que l'arbre a 10 compétences mtn au lieu
de 8, et puis les cellules passent bien en dessous au lieu de passer à
moitié au travers.
Ya plein de classes non commentées, j'y travaille. J'ai au moins
l'effort de les trier x)

--- a/LUCAc#/Assembly-CSharp-vs.csproj
+++ b/LUCAc#/Assembly-CSharp-vs.csproj
@@ -67,6 +67,7 @@
      <Compile Include="Assets\classes\Molecules\actionData.cs" />
      <Compile Include="Assets\classes\Molecules\macroMolecule.cs" />
      <Compile Include="Assets\classes\Molecules\molecule.cs" />
+     <Compile Include="Assets\classes\Molecules\moleculePack.cs" />
      <Compile Include="Assets\classes\Molecules\simpleMolecule.cs" />
      <Compile Include="Assets\classes\POINT.cs" />
      <Compile Include="Assets\classes\livings\Individual.cs" />
@@ -77,6 +78,7 @@
      <Compile Include="Assets\classes\rtsmove.cs" />
      <Compile Include="Assets\classes\skills\perkData.cs" />
      <Compile Include="Assets\classes\skills\perkTree.cs" />
+     <Compile Include="Assets\classes\skills\perkType.cs" />
      <None Include="Assets\PrimitivePlus\Documentation\ReadMe.txt" />
      <None Include="Assets\perktree.txt" />
  <Reference Include="UnityEngine.UI">
