GitIgnore ready to ignore !

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ Thumbs.db
 Thumbs.db.meta
 Editor.meta
 ComboBox.meta
+ProjectSettings.asset
 
 # Directories potentially created on remote AFP share
 .AppleDB
